# crackVis

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: resources.cmake
libs/: libs.cmake
libs/datraw/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/imgui/: CMakeLists.txt
libs/imguizmo/: CMakeLists.txt
libs/lodepng/: CMakeLists.txt
src/: main.cpp
src/core/: Core.cpp  Core.h  PluginDescriptor.h  RenderPlugin.cpp  RenderPlugin.h
src/core/camera/: OrbitCamera.h  Trackball.cpp  Trackball.h
src/core/util/: FileUtil.cpp  ImageUtil.cpp  ImageUtil.h
src/plugins/PCVC/HelloCube/: HelloCube.cpp  HelloCube.h
src/plugins/PCVC/HelloCube/resources/: cube.frag  cube.vert
src/plugins/PCVC/Picking/: CrackVis.cpp  CrackVis.h  Mesh.cpp  Mesh.h  Objects.cpp  Objects.h
src/plugins/PCVC/Picking/resources/shaders/: base.frag  base.vert  box.frag  box.vert  cube.frag  cube.geom  cube.vert  model.frag  model.vert  quad.frag  quad.vert  sphere.frag  sphere.vert  torus.frag  torus.vert
src/plugins/PCVC/Picking/resources/textures/: LICENSE.md
src/plugins/PCVC/VolumeVis/: VolumeVis.cpp  VolumeVis.h
src/plugins/PCVC/VolumeVis/resources/shaders/: background.frag  background.vert  histo.frag  histo.geom  histo.vert  tf-lines.frag  tf-lines.vert  tf-view.frag  volume.frag
src/plugins/PCVC/VolumeVis/resources/transfer/: engine.tf
src/plugins/PCVC/VolumeVis/resources/volumes/: .gitignore
